add english text

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <nav class="nav-menu" role="navigation">
               <ul class="menu">
                 <li class="menu__item menu__item--dropdown">
-                  <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
+                  <a href="#" class="menu__link">Services<span class="menu__link--arrow"></span></a>
                   <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                     <li class="menu-submenu__item">
                       <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Konserwacja urządzeń elektroenergetycznych
@@ -104,10 +104,11 @@
                   </ul>
                 </li>
                 <li class="menu__item">
-                  <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizacje</a>
+                  <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizations
+                  </a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Technologie<span class="menu__link--arrow"></span></a>
+                  <a href="#" class="menu__link">Technologies<span class="menu__link--arrow"></span></a>
                   <ul class="menu-submenu menu-submenu--2 js--menu-submenu">
                     <li class="menu-submenu__item">
                       <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Mieszanka Gazów
@@ -124,10 +125,10 @@
                   </ul>
                 </li>
                 <li class="menu__item">
-                  <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">O nas</a>
+                  <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">About us</a>
                 </li>
                 <li class="menu__item">
-                  <a href="kontakt.html" class="menu__link js-anchor--link">Kontakt</a>
+                  <a href="kontakt.html" class="menu__link js-anchor--link">Contact</a>
                 </li>
                 <li class="menu__item menu-item--ue">
                   <a href="przetargi.html" class="menu__link-ue js-anchor--link">
