add english text

--- a/index.html
+++ b/index.html
@@ -195,17 +195,18 @@
 
           <div class="hero-slider">
             <div class="hero-slider__slide active">
-              <h1 class="hero-slider__slide-title">Profesjonalne usługi
-                z wieloletnim doświadczeniem</h1>
+              <h1 class="hero-slider__slide-title">Professional services 
+                with years of experience</h1>
             </div>
             <div class="hero-slider__slide">
-              <h1 class="hero-slider__slide-title">Pracujemy do 24 godzin
-                7 dni w tygodniu,
-                365 dni w roku!</h1>
+              <h1 class="hero-slider__slide-title">We work 24 hours a day, 
+                7 days a week, 
+                365 days a year!</h1>
             </div>
             <div class="hero-slider__slide">
-              <h1 class="hero-slider__slide-title">Skuteczność oraz
-                bezpieczeństwo</h1>
+              <h1 class="hero-slider__slide-title">
+                Efficiency and 
+                safety</h1>
             </div>
           </div>
           <div class="hero-controls">
@@ -274,14 +275,14 @@
           <figure class="main__boxes-box__icon main__boxes-box__icon--rad">
             <img src="images/factory.svg" alt="3ns fabryka">
           </figure>
-          <p class="main__boxes-box__text main__boxes-box__text--1">Firma 3N Solutions Sp. z o.o. specjalizuje się w kompleksowej konserwacji urządzeń elektrycznych oraz czyszczenia pomieszczeń produkcyjnych.</p>
+          <p class="main__boxes-box__text main__boxes-box__text--1">3N Solutions company specializes in comprehensive maintenance of electrical equipment and cleaning of production premises.</p>
         </div>
         <div class="main__boxes-box main__boxes-box--2">
           <div class="main__boxes-box__wrap">
             <figure class="main__boxes-box__icon main__boxes-box__icon--coo">
               <img src="images/cooperation.svg" alt="współpraca">
             </figure>
-            <p class="main__boxes-box__text main__boxes-box__text--2">Od 2010 roku budujemy doświadczenie oraz relacje z klientami na terenie całego kraju poprawiając bezpieczeństwo oraz efektywność działania systemów elektro-energetycznych w zakładach naszych Partnerów.</p>
+            <p class="main__boxes-box__text main__boxes-box__text--2">Since 2010, we have been building experience and customer relations throughout the country, improving the safety and efficiency of electro-energy systems in our partners' facilities.</p>
           </div>
         </div>
         <div class="main__boxes-box main__boxes-box--3">
@@ -289,8 +290,7 @@
             <figure class="main__boxes-box__icon main__boxes-box__icon--bad">
               <img src="images/badge.svg" alt="bezpieczeństwo">
             </figure>
-            <p class="main__boxes-box__text main__boxes-box__text--3">Najbardziej efektywna z dostępnych na rynku technologia czyszczenia urządzeń elektrycznych.
-              Zastosowanie metody suchych gazów o ciśnieniu nie przekraczającym 0,5-1,5 bar</p>
+            <p class="main__boxes-box__text main__boxes-box__text--3">The most effective cleaning technology for electrical devices available on the market. Our technology is based on an innovative cleaning medium which consist of the unique gas mixture with a pressure not exceeding 0.5-1.5 bar</p>
           </div>
         </div>
       </div>
