add english text

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
       <div class="main__services">
         <section class="container">
-          <h2 class="main__services-title">Nasze Usługi</h2>
+          <h2 class="main__services-title">Our services</h2>
 
           <div class="main__services-parallax">
 
@@ -311,9 +311,9 @@
 
               <div class="main__services-parallax__box-clip main__services-parallax__box-clip--second main__services-parallax__box-clip--two">
                 <div class="main__services-parallax__box-wrap">
-                  <h3 class="main__services-parallax__box-wrap__title">Konserwacja urządzeń elektroenergetycznych</h3>
-                  <p class="main__services-parallax__box-wrap__text">Konserwacja urządzeń elektrycznych jest elementem niezbędnym prawidłowego utrzymania ruchu w zakładach produkcyjnych. Bez przestoju w produkcji.</p>
-                  <button class="main__services-parallax__box-wrap__btn"><a href="konserwacja.html" class="main__services-parallax__box-wrap__anchor">Więcej</a></button>
+                  <h3 class="main__services-parallax__box-wrap__title">Maintenance of electrical equipment</h3>
+                  <p class="main__services-parallax__box-wrap__text">Maintenance of electrical devices is an essential element of proper maintenance in production plants. No downtime in production.</p>
+                  <button class="main__services-parallax__box-wrap__btn"><a href="konserwacja.html" class="main__services-parallax__box-wrap__anchor">More</a></button>
                 </div>
               </div>
             </div>
@@ -325,9 +325,9 @@
 
               <div class="main__services-parallax__box-clip main__services-parallax__box-clip--fourth main__services-parallax__box-clip--two main__services-parallax__box-clip--two-color">
                 <div class="main__services-parallax__box-wrap main__services-parallax__box-wrap--second">
-                  <h3 class="main__services-parallax__box-wrap__title">Czyszczenie urządzeń elektrycznych</h3>
-                  <p class="main__services-parallax__box-wrap__text">Stosujemy technologię opartą na innowacyjnym medium czyszczącym, którego głównym elementem jest specjalnie przygotowywana na rampie gazowej samochodu technologicznego, mieszanka gazów.</p>
-                  <button class="main__services-parallax__box-wrap__btn"><a href="czyszczenie.html">Więcej</a> </button>
+                  <h3 class="main__services-parallax__box-wrap__title">Cleaning of electrical appliances</h3>
+                  <p class="main__services-parallax__box-wrap__text">We use technology based on an innovative cleaning medium, the main element of which is a mixture of gases specially prepared on the gas ramp of a technological car.</p>
+                  <button class="main__services-parallax__box-wrap__btn"><a href="czyszczenie.html">More</a></button>
                 </div>
               </div>
             </div>
@@ -339,9 +339,10 @@
 
               <div class="main__services-parallax__box-clip main__services-parallax__box-clip--sixth main__services-parallax__box-clip--two">
                 <div class="main__services-parallax__box-wrap main__services-parallax__box-wrap--third">
-                  <h3 class="main__services-parallax__box-wrap__title">Czyszczenie hydrodynamiczne</h3>
-                  <p class="main__services-parallax__box-wrap__text">Poprawa efektywności oraz bezpieczeństwa działania zakładów naszych Klientów, poprzez stosowaną przez nas technologię czyszczenia powierzchni z wykorzystaniem wysokich ciśnień, która pozwala szybko i skutecznie usuwać wszelkie zabrudzenia. Nasze rozwiązania znajdują szerokie zastosowanie niemal we wszystkich gałęziach przemysłu. Korzystając z mobilnych agregatów i specjalistycznych dysz, możemy docierać do trudno dostępnych miejsc.</p>
-                  <button class="main__services-parallax__box-wrap__btn"><a href="czyszczenie-hydrodynamiczne.html">Więcej</a></button>
+                  <h3 class="main__services-parallax__box-wrap__title">Hydrodynamic cleaning</h3>
+                  <p class="main__services-parallax__box-wrap__text">The high pressure solutions we use enable cleaning and removal of
+                    concrete, corrosion, rust, paints, hard deposits and many other coatings that are difficult to remove. Using mobile aggregates and specialized nozzles, we can access places that are impossible to reach.</p>
+                  <button class="main__services-parallax__box-wrap__btn"><a href="czyszczenie-hydrodynamiczne.html">More</a></button>
                 </div>
               </div>
             </div>
@@ -353,11 +354,11 @@
 
               <div class="main__services-parallax__box-clip main__services-parallax__box-clip--eighth main__services-parallax__box-clip--two main__services-parallax__box-clip--two-color">
                 <div class="main__services-parallax__box-wrap main__services-parallax__box-wrap--fourth">
-                  <h3 class="main__services-parallax__box-wrap__title">Czyszczenie popożarowe</h3>
-                  <p class="main__services-parallax__box-wrap__text">Innowacyjna metoda suchej mieszanki gazów, pozwala
-                    na 100% usunięcia sadzy z podzespołów. Czas usunięcia awarii
-                    wywołanej przez pożar, jest bardzo krótki. Metoda 3ns zapobiega także korozji.</p>
-                  <button class="main__services-parallax__box-wrap__btn"><a href="czyszczenie-pozarowe.html" class="main__services-parallax__box-wrap__anchor">Więcej</a></button>
+                  <h3 class="main__services-parallax__box-wrap__title">After-fire cleaning</h3>
+                  <p class="main__services-parallax__box-wrap__text">Our dry gas mix technology allows to remove 100% of soot from components and saves up to 90% of them. The time to remove damage 
+                    caused by fire is very short, and the components are restored to their functional state in less time than required for the replacement of burnt wiring.
+                  </p>
+                  <button class="main__services-parallax__box-wrap__btn"><a href="czyszczenie-pozarowe.html" class="main__services-parallax__box-wrap__anchor">More</a></button>
                 </div>
               </div>
             </div>
@@ -369,9 +370,9 @@
 
               <div class="main__services-parallax__box-clip main__services-parallax__box-clip--tenth main__services-parallax__box-clip--two">
                 <div class="main__services-parallax__box-wrap main__services-parallax__box-wrap--fifth">
-                  <h3 class="main__services-parallax__box-wrap__title">Pomiary termowizyjne i elektryczne</h3>
-                  <p class="main__services-parallax__box-wrap__text">Kompleksowe wykonanie pomiarów instalacji elektro-energetycznych. W ramach usługi jesteśmy w stanie przygotować raport obejmujący analizę stanu technicznego podzespołów na bazie pomiarów termowizyjnych oraz pomiarów elektrycznych.</p>
-                  <button class="main__services-parallax__box-wrap__btn"><a href="pomiary.html">Więcej</a></button>
+                  <h3 class="main__services-parallax__box-wrap__title">Thermovision and electrical measurements</h3>
+                  <p class="main__services-parallax__box-wrap__text">Comprehensive measurements of electrical and energy installations. As part of the service, we are able to prepare a report including an analysis of the technical condition of components based on thermography and electrical measurements.</p>
+                  <button class="main__services-parallax__box-wrap__btn"><a href="pomiary.html">More</a></button>
                 </div>
               </div>
             </div>
@@ -381,62 +382,62 @@
 
       <div class="main__why">
         <section class="container">
-        <h2 class="main__why-title">Dlaczego 3n Solutions?</h2>
+        <h2 class="main__why-title">Why 3n Solutions?</h2>
         <div class="main__why-container">
           <ul class="main__why-container__tabs">
             <li class="main__why-container__tabs-el main__why-container__tabs-el--1 js-tabs-el">
               <a href="#tab1" class="main__why-container__tabs-el__link">
                 <img src="images/piggybank.svg" class="main__why-container__tabs-el__img main__why-container__tabs-el__img--1">
-                <span class="main__why-container__tabs-el__title">Obniżenie kosztów</span>
+                <span class="main__why-container__tabs-el__title">Cost reduction</span>
               </a>
             </li>
             <li class="main__why-container__tabs-el main__why-container__tabs-el--2 js-tabs-el is-active">
               <a href="#tab2" class="main__why-container__tabs-el__link">
                 <img src="images/badge.svg" class="main__why-container__tabs-el__img main__why-container__tabs-el__img--2">
-                <span class="main__why-container__tabs-el__title">Efektywność</span>
+                <span class="main__why-container__tabs-el__title">Efficiency</span>
               </a>
             </li>
             <li class="main__why-container__tabs-el main__why-container__tabs-el--3 js-tabs-el">
               <a href="#tab3" class="main__why-container__tabs-el__link">
                 <img src="images/protection.svg" class="main__why-container__tabs-el__img main__why-container__tabs-el__img--3">
-                <span class="main__why-container__tabs-el__title">Bezpieczeństwo</span>
+                <span class="main__why-container__tabs-el__title">Security</span>
               </a>
             </li>
           </ul>
 
           <div id="tab1" class=" main__why-container__tabs-content main__why-container__tabs-content--1 js-tabs-content">
             <div class="main__why-container__tabs-content__tab main__why-container__tabs-content__tab-1">
-              <p class="main__why-container__tabs-content__tab-text">Zwiększenie żywotności podzespołów</p>
+              <p class="main__why-container__tabs-content__tab-text">Increasing the service life of components</p>
             </div>
             <div class="main__why-container__tabs-content__tab main__why-container__tabs-content__tab--2">
-              <p class="main__why-container__tabs-content__tab-text">Eliminacja ryzyka przestojów lini technologicznych</p>
+              <p class="main__why-container__tabs-content__tab-text">Elimination of the risk of downtime of technological lines</p>
             </div>
             <div class="main__why-container__tabs-content__tab main__why-container__tabs-content__tab--3">
-              <p class="main__why-container__tabs-content__tab-text">Eliminacja ryzyka przestojów lini technologicznych</p>
+              <p class="main__why-container__tabs-content__tab-text">Elimination of the risk of downtime of technological lines</p>
             </div>
           </div>
 
           <div id="tab2" class=" main__why-container__tabs-content main__why-container__tabs-content--2 js-tabs-content is-active">
             <div class="main__why-container__tabs-content__tab main__why-container__tabs-content__tab--1">
-              <p class="main__why-container__tabs-content__tab-text">Usunięcie zabrudzeń z miejsc niedostępnych dla innych metod czyszczenia</p>
+              <p class="main__why-container__tabs-content__tab-text">Removal of dirt from places inaccessible to other cleaning methods</p>
             </div>
             <div class="main__why-container__tabs-content__tab main__why-container__tabs-content__tab--2">
-              <p class="main__why-container__tabs-content__tab-text">Możliwość wykrycia potencjalnych usterek systemu w trakcie czyszczenia</p>
+              <p class="main__why-container__tabs-content__tab-text">Possibility to detect potential system failures during cleaning</p>
             </div>
             <div class="main__why-container__tabs-content__tab main__why-container__tabs-content__tab--3">
-              <p class="main__why-container__tabs-content__tab-text">Skuteczne czyszczenie nawet do 100m2 instalacji w 8 godzin</p>
+              <p class="main__why-container__tabs-content__tab-text">Effective cleaning of up to 100 m2 of installation in 8 hours</p>
             </div>
           </div>
 
           <div id="tab3" class=" main__why-container__tabs-content main__why-container__tabs-content--3 js-tabs-content">
             <div class="main__why-container__tabs-content__tab main__why-container__tabs-content__tab--1">
-              <p class="main__why-container__tabs-content__tab-text">Eliminacja ryzyka pożaru instalacji elektrycznych</p>
+              <p class="main__why-container__tabs-content__tab-text">Elimination of the risk of fire in electrical installations</p>
             </div>
             <div class="main__why-container__tabs-content__tab main__why-container__tabs-content__tab--2">
-              <p class="main__why-container__tabs-content__tab-text">Całkowite bezpieczeństwo delikatnych elementów instalacji takich jak: układy scalone, elektronika, izolacja</p>
+              <p class="main__why-container__tabs-content__tab-text">Total safety sensitive system components such as integrated circuits, electronics, insulation</p>
             </div>
             <div class="main__why-container__tabs-content__tab main__why-container__tabs-content__tab--3">
-              <p class="main__why-container__tabs-content__tab-text">Brak zastosowania środków chemicznych</p>
+              <p class="main__why-container__tabs-content__tab-text">No chemicals are used</p>
             </div>
           </div>
         </div>
@@ -444,7 +445,7 @@
       </div>
 
       <div class="main__realizations">
-        <h2 class="main__realizations-title">Realizacje</h2>
+        <h2 class="main__realizations-title">Realizations</h2>
         <div class="main__realizations-video">
           <div class="main__realizations-video__overlay">
             <figure class="main__realizations-video__inner">
@@ -623,11 +624,11 @@
       <div class="main__technologies">
         <section class="container">
           <div class="main__technologies-wrapper">
-            <h2 class="main__technologies-title">Technologie</h2>
+            <h2 class="main__technologies-title">Technologies</h2>
             <div class="main__technologies-content">
               <div class="main__technologies-content__box main__technologies-content__box--1">
                 <div class="main__technologies-content__box-col">
-                  <p class="main__technologies-content__box-text">Technologie dopasowujemy indywidualnie do każdego klienta, aby dowiedzieć się więcej skontaktuj się z nami.</p>
+                  <p class="main__technologies-content__box-text">Technologies to individually tailor each customer, to find out more please contact us.</p>
                   <div class="main__technologies-content__box-contact main__technologies-content__box-contact--1">
                     <a href="tel:+48 22 233 00 50" class="main__technologies-content__box-contact__anchor main__technologies-content__box-contact__anchor--1">
                       <img src="images/smartphone_2.svg" class="main__technologies-content__box-contact__img main__technologies-content__box-contact__img--1" alt="mobile">
@@ -645,13 +646,8 @@
               <div class="main__technologies-content__box main__technologies-content__box--2">
                 <div class="main__technologies-content__box-child">
                   <div class="main__technologies-content__box-rectangle main__technologies-content__box-rectangle--1"></div>
-                  <h3 class="main__technologies-content__box-title">Mieszanka gazów</h3>
-                  <p class="main__technologies-content__box-text">Mieszanka dociera w niedostępne dla tradycyjnych metod miejsca
-                    i zakamarki podzespołów.
-                    Jest przy tym całkowicie sucha,
-                    nie powoduje zawilgocenia,
-                    nie wchodzi w reakcje fizyczne,
-                    ani chemiczne z czyszczonymi elementami.</p>
+                  <h3 class="main__technologies-content__box-title">Gas mixture</h3>
+                  <p class="main__technologies-content__box-text">The mixture reaches places inaccessible to traditional methods. At the same time, it is completely dry, does not cause moisture, does not react physically or chemically with the cleaned elements.</p>
                   <a href="mieszanka-gazow.html" role="button" class="main__technologies-content__box-btn">Więcej</a>
                 </div>
     
