--- a/index.html
+++ b/index.html
@@ -82,45 +82,36 @@
                   <a href="#" class="menu__link">Services<span class="menu__link--arrow"></span></a>
                   <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                     <li class="menu-submenu__item">
-                      <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Konserwacja urządzeń elektroenergetycznych
-                      </a>
+                      <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                     </li>
                     <li class="menu-submenu__item">
-                      <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Czyszczenie urządzeń elektrycznych
-                      </a>
+                      <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                     </li>
                     <li class="menu-submenu__item">
-                      <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                      </a>
+                      <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                     </li>
                     <li class="menu-submenu__item">
-                      <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">Czyszczenie popożarowe
-                      </a>
+                      <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                     </li>
                     <li class="menu-submenu__item">
-                      <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Pomiary termowizyjne i elektryczne
-                      </a>
+                      <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                     </li>
                   </ul>
                 </li>
                 <li class="menu__item">
-                  <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizations
-                  </a>
+                  <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
                 </li>
                 <li class="menu__item">
                   <a href="#" class="menu__link">Technologies<span class="menu__link--arrow"></span></a>
                   <ul class="menu-submenu menu-submenu--2 js--menu-submenu">
                     <li class="menu-submenu__item">
-                      <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Mieszanka Gazów
-                      </a>
+                      <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
                     </li>
                     <li class="menu-submenu__item">
-                      <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                      </a>
+                      <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                     </li>
                     <li class="menu-submenu__item">
-                      <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonowanie
-                      </a>
+                      <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonation</a>
                     </li>
                   </ul>
                 </li>
@@ -648,26 +639,23 @@
                   <div class="main__technologies-content__box-rectangle main__technologies-content__box-rectangle--1"></div>
                   <h3 class="main__technologies-content__box-title">Gas mixture</h3>
                   <p class="main__technologies-content__box-text">The mixture reaches places inaccessible to traditional methods. At the same time, it is completely dry, does not cause moisture, does not react physically or chemically with the cleaned elements.</p>
-                  <a href="mieszanka-gazow.html" role="button" class="main__technologies-content__box-btn">Więcej</a>
+                  <a href="mieszanka-gazow.html" role="button" class="main__technologies-content__box-btn">More</a>
                 </div>
     
                 <div class="main__technologies-content__box-child">
                   <div class="main__technologies-content__box-rectangle main__technologies-content__box-rectangle--2"></div>
-                  <h3 class="main__technologies-content__box-title">Ozonowanie</h3>
-                  <p class="main__technologies-content__box-text">Ozonowanie jest metodą,
-                    do której wykorzystywany jest
-                    gaz – ozon (O3) czasem nazywany aktywnym tlenem, który jest jednym z najskuteczniejszych znanych środków dezynfekujących.</p>
-                  <a href="ozonowanie.html" role="button" class="main__technologies-content__box-btn">Więcej</a>
+                  <h3 class="main__technologies-content__box-title">Ozonation</h3>
+                  <p class="main__technologies-content__box-text">Ozonation is a method, 
+                    that uses a gas - ozone (O3), sometimes called active oxygen, which is one of the most effective disinfectants known.</p>
+                  <a href="ozonowanie.html" role="button" class="main__technologies-content__box-btn">More</a>
                 </div>
               </div>
               <div class="main__technologies-content__box main__technologies-content__box--3">
                 <div class="main__technologies-content__box-child">
                   <div class="main__technologies-content__box-rectangle main__technologies-content__box-rectangle--3"></div>
-                  <h3 class="main__technologies-content__box-title">Czyszczenie hydrodynamiczne</h3>
-                  <p class="main__technologies-content__box-text">Profesjonalne usługi
-                    dla przemysłu: Czyszczenie hydrodynamiczne, Próżniowy załadunek odpadów, odkurzanie, Renowacja konstrukcji, Specjalistyczna wiedza inżynierska - rozwiązania szyte
-                    na miarę.</p>
-                  <a href="czyszczenie-hydrodynamiczne-2.html" role="button" class="main__technologies-content__box-btn">Więcej</a>
+                  <h3 class="main__technologies-content__box-title">Hydrodynamic cleaning</h3>
+                  <p class="main__technologies-content__box-text">Professional services for industry: Hydrodynamic cleaning, Vacuum loading of waste, vacuuming, Renovation of structures, Special engineering knowledge - tailor-made solutions.</p>
+                  <a href="czyszczenie-hydrodynamiczne-2.html" role="button" class="main__technologies-content__box-btn">More</a>
                 </div>
               </div>
             </div>
@@ -695,18 +683,18 @@
         <div class="footer-content__bottom">
           <div class="footer-content__bottom-left">
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
-              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Kontakt</h4>
+              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
               <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
               <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
             </div>
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Biuro Handlowe</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
                 <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
                 01-320 Warszawa</span>
               </div>
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Siedziba Firmy</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
                 <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
                 00-819 Warszawa
               </span>
@@ -715,7 +703,7 @@
           </div>
           <div class="footer-content__bottom-center">
             <div class="footer-content__bottom-center__content">
-              <h4 class="footer-content__bottom-center__title">Znajdziesz Nas</h4>
+              <h4 class="footer-content__bottom-center__title">Find us</h4>
               <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
               </a>
               <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
@@ -728,9 +716,10 @@
             </div>
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
               <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-                Warszawy XII Wydział Gospodarczy Krajowego
-                Rejestru Sądowego NIP:5213388077, REGON:140555502
-                Kapitał zakładowy:50 000 zł (wpłacony w całości)</span>
+                KRS: 0000257515, District Court for the Capital City of
+                Warsaw, XII Commercial Division of the National
+                Court Register NIP: 5213388077, REGON: 140555502
+                Share capital: PLN 50,000 (paid up in full)</span>
             </div>
           </div>
         </div>
